--- a/style.css
+++ b/style.css
@@ -7,15 +7,18 @@
 
 body{
     margin: 0;
-    background-color: #cd094e;
+    background-color: #ffffff;
      font-family: "Poppins", sans-serif;
 }
 
 header{
-    background-color: #0615de;
+    background-color: #000000;
     padding: 1rem;
     display: flex;
     justify-content: flex-end;
+}
+h3{
+    color: #fff;
 }
 
 .search {
@@ -50,7 +53,7 @@ main{
     box-shadow: 0 4px 5px rgba(0,0,0,0.2);
     border-radius: 3px;
     width: 300px;
-    background-color: #0d1dd2;
+    background-color: #4ac3ff;
     margin: 1rem;
     overflow: hidden;
     position: relative;
@@ -89,7 +92,7 @@ main{
  color: orange;
 }
 .movie-info span.red{
-    color: red;
+    color: rgb(38, 219, 255);
 
 }
 
